# SpaceOddity

./: .gitignore  MANIFEST.in  README.md  TODO.txt  Untitled Document 1  VERSION  clean_install.txt  convert-cfg.py  convert_json.py  cron-install.py  cron-uninstall.py  cron_install.py  cron_uninstall.py  install-cron.py  install.py  psuedo.txt  pyproject.toml  run.py  self_c..txt  self_d.txt  self_g.txt  spaceoddity todo  spaceoddity.conf  spaceoddity.json  spaceoddity.py  spaceoddity_c.py  spaceoddity_c.sh  spaceoddity_caption.py  spaceoddity_d.py  spaceoddity_main.py  spaceoddity_orig.conf  todo.txt  uninstall.py
_README/: README.old
_TODO/: TODO.txt
_caption/: spaceoddity_caption.py
_gui/: spaceoddity.desktop  spaceoddity.glade  spaceoddity.glade~  spaceoddity_gui.py
_next/: install-latest  next_todo
_other/: README.old  TODO.txt  apod_linux_config_gtk.py  apod_linux_config_tk.py  ini_parser.py  install.py  install.sh  install2.py  spaceoddity_orig.conf  uninstall.py
_readme/: README.old
_test/: clean_install.txt  dict_funcs.py  scratch.py  test_dict_functions.py  text_size.py
gui/: launchcode.py  spaceoddity.glade  spaceoddity.glade~  spaceoddity_g.py  spaceoddity_gui.py
incidentals/: ini_parser.py  spaceoddity_c.py  spaceoddity_c.sh
login_unlock/: apod_linux_login.sh  apod_linux_unlock.sh
misc/: checklist.txt
old/: install.py  uninstall.py
other/: ini_parser.py  install.py  single_inst.py
other/incidentals/: README.md  install.py  spaceoddity.desktop
src/: __init__.py  convert_json.py  cron_install.py  cron_uninstall.py  install.py  spaceoddity.py  uninstall.py
todo/: checklist.txt  todo.txt
unused/: spaceoddity.conf
(+4 files in other folders)
